# STL

./: .gitignore
Glava_2/: Array_stack.cpp  Array_stack.h  CMakeLists.txt  Shape.cpp  Shape.h  Stack.cpp  Stack.h  Stack_T.h  Stack_v.cpp  Stack_v.h  main.cpp  main.h
Glava_3/: CMakeLists.txt  Vec.h  main.cpp
Glava_4/: CMakeLists.txt  main.cpp
Glava_5/: CMakeLists.txt  main.cpp
Glava_6/: CMakeLists.txt  main.cpp
Glava_6_Calc/: CMakeLists.txt  calc.cpp  calc.h  main.cpp
Glava_7/: CMakeLists.txt
ITVDN/: CMakeLists.txt  List.cpp  List.h  List_2.cpp  List_2.h  Queue.cpp  Queue.h  Stack.cpp  Stack.h  main.cpp
Test_Glava_4/src/: main  main.cpp  s
