cmake_minimum_required(VERSION 3.17)
project(Glava_5)

set(CMAKE_CXX_STANDARD 17)


#set(Boost_INCLUDE_DIR /usr/local/include)
#set(Boost_LIBRARY_DIR /usr/local/lib)
#
#find_package(Boost)
#
#include_directories(${Boost_INCLUDE_DIR})
#link_directories(${Boost_LIBRARY_DIR})

add_executable(Glava_5 main.cpp)

#target_link_libraries( Glava_5 ${Boost_LIBRARIES} )








